@@ -6,6 +6,7 @@ use Moo;
 use Scalar::Util qw(blessed);
 use HTTP::OAI;
 use Data::Dumper;
+use Carp;
 
 with 'Catmandu::Importer';
 
@@ -23,7 +24,11 @@ sub _build_handler {
     my ($self) = @_;
     if ($self->metadataPrefix eq 'oai_dc') {
         return 'oai_dc';
-    } else {
+    } 
+    elsif ($self->metadataPrefix eq 'marcxml') {
+        return 'marcxml';
+    }
+    else {
         return 'struct';
     }
 }
@@ -232,9 +237,13 @@ package that implements 'parse', or by a package NAME. Package names should
 be prepended by C<+> or prefixed with C<Catmandu::Importer::OAI::Parser>. E.g
 C<foobar> will create a C<Catmandu::Importer::OAI::Parser::foobar> instance.
 
-Be default, L<Catmandu::Importer::OAI::Parser::DC> is used for C<oai_dc> type of
-responses. For all other responses, L<XML::Struct> is used to transform the 
-XML fragment into record field C<_metadata>.
+Supported handles:
+    oai_dc  : Catmandu::Importer::OAI::Parser::oai_dc
+    marcxml : Catmandu::Importer::OAI::Parser::marcxml
+    raw     : Catmandu::Importer::OAI::Parser::raw (dont parse return the xml as is)
+
+By all other responses, L<XML::Struct> is used to transform the  XML fragment into record 
+field C<_metadata>.
 
 =item set
 
